src/styles/index.scss
body, .App, #root{
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  height: 100%;  
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

$couleur_primaire: #FF6060;

ul, li, a {
  margin-left: 0;
  list-style: none;
  font-style: none;
  text-decoration: none;
  color: $couleur_primaire;
  padding: 0;
}

.link_nav{
  &:hover {
    border-bottom: solid;
  }
}
main{
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}
.main_APropos {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: center;
  width: 100%;
}

.Apropos_contenant_collapse{
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 100%
}

.header {
  display : flex;
  flex-flow: row wrap;
  justify-content: space-between;
  width: 90%;
  margin-top: 20px;
   &__navigation {
    margin-left: 0;
    width: 300px;
    display: flex;
    flex-direction: row wrap;
    justify-content: space-around;
  } 
}

.footer {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
  background-color: black;
  height: 134px;
  width: 100%;
  color: white;
  margin-top: 30px;
}

.Bienvenue {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 90%;
  height: 223px;
  margin: 50px 0 20px 0;
 
  border-radius: 15px;
  background: url('../img/img_acceuil.png');
  background-position: center center;
  background-size: cover;
  
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    mix-blend-mode: darken;
    border-radius: 15px;
  }

  &_titre {
    position: absolute;
    color: white;
    font-size: 4.2vw;
    font-weight: 500;
  }
}

.card_appartements {
  display: flex;
  flex-flow: column wrap;
  align-items: flex-start;
  justify-content: flex-end;
  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
  background-size: 340px 340px;
  color: white;
  border-radius: 15px;
  width: 340px;
  height: 340px;
  margin: 20px 20px 20px 20px;
 
  &_title {
    margin-left: 15px;
    font-size: 18px;
  }
}

.contenant_card_appartements {
  display:flex;
  flex-flow: row wrap;
  justify-content: space-around;
  background-color: #F6F6F6 ;
  width: 90%;
  border-radius: 15px;
}

// Est une grille contenant toute le information du logements correspond au main de la page html
.logement{
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  color: $couleur_primaire;
  width: 100%;
  margin-top: 20px;

  &_main {
    width: 90%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr); 
    grid-column-gap: 0px;
    grid-row-gap: 0px;

  }

  &_main_title{
    margin: 0;
    grid-area: 1 / 1 / 2 / 2; 
    align-self: center;

  }
  &_main_city {
    grid-area:   2 / 1 / 3 / 2; 
    align-self: start;
    margin-bottom: 30px;
  }
  &_main_hote {
    margin: 0;
    width: 230px;
    grid-area:  1 / 2 / 2 / 3; 
    font-size: 24px;
    justify-self: end;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    
    &_photo {
      align-self: center;
      border-radius: 50%;
      width: 80px;
      height: 80px;
    }
    &_name{
      width: 126px;
    }

  }
  
}


.logement_slideShow{
  background-size: 100% 415px;
  width: 90%;
  height: 415px;
  border-radius: 25px;
  justify-self: center;
  align-self: center;

  color: white;
  font-size: 79px; 
  mix-blend-mode: normal;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px; 
  
}
.arrow_gauche{
  grid-area: 1 / 1 / 3 / 2; 
  align-self: end ;
  margin-bottom: 30px;
}
.arrow_droite{
  grid-area: 1 / 2 / 3 / 3; 
  align-self: end ;
  justify-self: end;
  margin-bottom: 30px;
}
.decompteSlide{
  font-size: 25px;
  grid-area: 3 / 1 / 4 / 3; 
  justify-self: center;
  align-self: center;
}

.tag{
 display: flex; 
 grid-area:   2 / 1 / 3 / 2; 
 margin-top: 30px;
 align-self: center;
}
.tag_content{
  background-color: $couleur_primaire;
  color: white;
  border-radius: 8px;
  padding: 4px 4px 4px 4px;
  font-size: 15px;
  width: fit-content;
  height: fit-content;
  margin-right: 5px;
 
}

.tagEquipement, .respect, .description, .responsabilite, .fiabilite, .service {
  justify-self: end;
  position:  relative;
   display: flex;
  flex-flow: row wrap;
  align-items: center; 
  background-color: $couleur_primaire;
  grid-area: 3 / 2 / 4 / 3;
  color: white;
  height: 30px;
  width: 90%;
  margin-bottom: 30px; 
  border-radius: 10px;
  &_titre{
    margin: 0;
    margin-left: 15px;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    width: 100%;
  }
  &_contenant {
     display: none; 
    position: absolute;
    background-color: #F6F6F6;
    color: $couleur_primaire;
    top: 30px;
    width: 100%;
    padding: 30px 0 30px 0;
    border-radius: 15px;
  } 

  &_equipement{
    margin-left: 15px;
  }

  &_fleche_bas {
    display: none;
    margin-top: 2px;
    margin-right: 15px;
  }

  &_fleche_haut {
    margin-top: 2px;
    margin-right: 15px;
  }

}

.tagEquipement {
  justify-self: start;
  grid-area: 3 / 1 / 4 / 2;
}

.contenant_etoiles {
  grid-area: 2 / 2 / 3 / 3;
  justify-self: end;
  font-size: 20px;
  margin-right:  5px;
  margin-top: 20px;
}

.not_found {
  color: $couleur_primaire;
  margin: 0px;
  margin-top: 100px;
  margin-bottom: 100px;
  display: flex;
  flex-flow: column wrap;
  align-items: center;

  &_404 {
    font-size: 288px;
    margin: 0;
  }

  &_texte {
    color: $couleur_primaire;
    font-size: 18px;
    text-align: center;
  }

  &_link {
    width: 300px;
    color: $couleur_primaire;
    text-align: center;
    text-decoration-line: underline;
  }
}


 @media screen and (max-width: 1269px){
  .contenant_card_appartements {
    justify-content: space-around;
  }
}
@media screen and (max-width: 1000px){
  .not_found {
    color: $couleur_primaire;
    margin: 0px;
    margin-top: 250px;
    margin-bottom: 250px;
    display: flex;
    flex-flow: column wrap;
    align-items: center;

    &_404 {
      font-size: 96px;
      margin: 0;
    }

    &_texte {
      width: 80%;
      color: $couleur_primaire;
      font-size: 18px;
      text-align: center;
    }

    &_link {
      width: 300px;
      color: $couleur_primaire;
      text-align: center;
      text-decoration-line: underline;
    }
  }

}

@media screen and (max-width: 700px){

  .logo {
    margin-top: 10px;
    width: 100px;
    height: 30px;
  }
  .header__navigation{ 
    justify-content: space-between;
    width: 150px;
    margin-left: 0px;
  }
  .Apropos_contenant_collapse {
   
    width: 90%;
  }

}

@media screen and (max-width: 450px) {
  .Bienvenue {
    width: 335px;
    height: 151px;
    width: 90%;
    &_titre {
      margin: 25px;
      font-size: 24px;
    }
  }


  .contenant_card_appartements {
    background-color: white;
  }

  .card_appartements {
      height: 255px;
      width: 335px;
    }
}



/// Responsive page logements 

@media screen and (max-width: 700px ) {


    .logement {
      &_main {
        width: 90%;
        justify-self: center;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 79px 20px 60px  ;
        grid-column-gap: 0px;
        grid-row-gap: 5px; 
      }
      
      &_main_title {
        margin: 0;
        margin-top: 5px;
        grid-area: 1 / 1 / 2 / 2; 
        align-self: start;
        font-size: 24px;
      }

      &_main_city {
        grid-area: 2 / 1 / 3 / 2; 
        align-self: start;
        margin: 0;
      }

      &_main_hote {
        margin: 0;
        margin-top: 5px;
        width: 180px;
        grid-area: 3 / 1 / 4 / 2;
        font-size: 12px;
        align-self: start;
        justify-self: end;
        display: flex;
        flex-flow: row wrap;
        justify-content: space-around;
        
        &_photo {
          border-radius: 50%;
          width: 32px;
          height: 32px;
        }

        &_name{
          width: 40px;
        }
      }
    }

    .arrow_gauche{
      grid-area: 1 / 1 / 3 / 2; 
      align-self: end ;
      margin-bottom: 10px;
    }
    
    .arrow_droite{
      grid-area: 1 / 2 / 3 / 3; 
      align-self: end ;
      justify-self: end;
      margin-bottom: 10px;
    }
    .contenant_etoiles {
      grid-area: 3 / 1 / 4 / 2;
      justify-self: start;
      align-self: start;
      font-size: 20px;
      margin-right:  5px;
      margin-top: 17px;
    }

    .logement_slideShow{
      height: 255px;
      align-self: center;
    }

    .tag{
      display: flex; 
      grid-area: 4 / 1 / 4 / 2; 
      margin-top: 0px;
      margin-bottom: 20px;
      align-self: start;
     }

    .etoiles {
      height: 15px;
     }

    .tagEquipement {
      grid-area: 5 / 1 / 6 / 2;
      justify-self: center;
      width: 100%;
    } 

    .respect, .description, .responsabilite, .fiabilite, .service {
      grid-area: 6 / 1 / 6 / 2;
      justify-self: center;
      width: 100%;
     }

}

